gap fixed on geometry container

--- a/FigurasGeometricas/style.css
+++ b/FigurasGeometricas/style.css
@@ -43,7 +43,7 @@ html{
     display:flex;
     justify-content: center;
     align-items: center;
-    gap:20px;
+    gap:35px;
     flex-wrap: wrap;
     padding: 0 15px;
 }
